Corrected spacing issue on cat page featured items list.

--- a/_ac_styles.css
+++ b/_ac_styles.css
@@ -1632,6 +1632,7 @@ div .catListingCat:hover{
 	width: 222px;
 	height:330px;
 	margin-bottom:10px;
+	margin-right:5px;
 }
 .prodThumbContainer{
 	border:solid 6px rgb(40, 40, 40);
